[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Ui/RegularLabel/RegularLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/timeline/turn_banner.png" type="Texture" id=2]
[ext_resource path="res://assets/timeline/turn_neutral.png" type="Texture" id=3]
[ext_resource path="res://scenes/2D/Timeline2D/QueueTurn.gd" type="Script" id=4]
[ext_resource path="res://assets/timeline/turn_blue.png" type="Texture" id=5]
[ext_resource path="res://assets/timeline/turn_red.png" type="Texture" id=6]

[node name="QueueTurn" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -607.0
margin_bottom = -342.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 33.0
margin_bottom = 18.0
custom_constants/separation = 0

[node name="SubTurns" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 33.0
margin_bottom = 6.0
custom_constants/separation = 1

[node name="SubTurnNeutral" type="TextureButton" parent="VBoxContainer/SubTurns"]
margin_right = 16.0
margin_bottom = 6.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="SubTurnRed" type="TextureButton" parent="VBoxContainer/SubTurns"]
visible = false
margin_right = 16.0
margin_bottom = 6.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )

[node name="SubTurnBlue" type="TextureButton" parent="VBoxContainer/SubTurns"]
visible = false
margin_right = 16.0
margin_bottom = 6.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )

[node name="SubTurnNeutral2" type="TextureButton" parent="VBoxContainer/SubTurns"]
margin_left = 17.0
margin_right = 33.0
margin_bottom = 6.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )

[node name="SubTurnRed2" type="TextureButton" parent="VBoxContainer/SubTurns"]
visible = false
margin_left = 17.0
margin_right = 33.0
margin_bottom = 6.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )

[node name="SubTurnBlue2" type="TextureButton" parent="VBoxContainer/SubTurns"]
visible = false
margin_left = 17.0
margin_right = 33.0
margin_bottom = 6.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )

[node name="Banner" type="CenterContainer" parent="VBoxContainer"]
margin_top = 6.0
margin_right = 33.0
margin_bottom = 18.0

[node name="Texture" type="TextureRect" parent="VBoxContainer/Banner"]
margin_top = 1.0
margin_right = 33.0
margin_bottom = 10.0
texture = ExtResource( 2 )

[node name="Label" parent="VBoxContainer/Banner" instance=ExtResource( 1 )]
margin_left = 16.0
margin_top = 0.0
margin_right = 16.0
margin_bottom = 12.0
custom_colors/font_color = Color( 0.584314, 0.584314, 0.584314, 1 )
align = 1
